--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -516,10 +516,9 @@ TODO rapport avec benchmark, lequere. comparer les courbes
   \caption{Mass flux for different boundary conditions}
 \end{table}
 \subsection{Chimney in a larger box}
-TODO interfacer triangle avec le programme, ou mesher en
-rectangles. Va poser des probl\`emes en stationnaire parce que
-turbulent, essayer en instationnaire et voir si il y a solution
-stationnaire dans la chemin\'ee
+TODO essayer le code de E. Chénier, changer les CL (boite
+ouverte). Comparer les CL de la boite restreinte avec les résultats de
+la grande.
 \section{Conclusion}
 TODO
 \listoffigures
