--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -376,7 +376,7 @@ $$x^{i+1} = x^i + h \frac{f(x^i) + f(x^{i+1})}{2}$$
 Note that while forward Euler is an explicit method, both backward
 euler and the trapezoidal rule are implicit : at each iteration, an
 equation has to be solved for $x^{i+1}$. Generally speaking, implicit
-methods are more stable than explicit ones, which allows greater
+methods are more stable than explicit ones, which allows larger
 steps to be taken.
 
 However, our problem, once spatially discretized, is not an ODE,
