--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -42,7 +42,7 @@ temperature or Maxwell laws for electromagnetism. Due to their wide
 applicability, they are essential for engineering. There is also a
 number of open problems in the mathematical study of these
 equations. In particular, the question of existence and smoothness of
-solutions are one of the Millenium Prize Problems.
+solutions is one of the Millenium Prize Problems.
 
 Fast, accurate and reliable numerical solutions to these equations is
 an important goal for engineering. Reflecting this, many commercial
