don't use colorlinks=true

--- a/.tex/common.sty
+++ b/.tex/common.sty
@@ -12,8 +12,9 @@
 \usepackage{mathdots}
 \usepackage{empheq}
 \usepackage{subfigure}
-\usepackage[colorlinks=true]{hyperref} %get rid of these stupid boxes,
-                                %but sometimes causes trouble at printing
+% \usepackage[colorlinks=true]{hyperref} %get rid of these stupid boxes,
+%                                 %but sometimes causes trouble at printing
+\usepackage{hyperref}
 \usepackage{verbatim}
 %\usepackage[normal]{caption} %use this to get normal-sized captions
 \usepackage{caption}
