wide tildes by default

--- a/.tex/common.sty
+++ b/.tex/common.sty
@@ -62,6 +62,7 @@
 \newcommand{\eps}{\varepsilon}
 \renewcommand{\O}{\mathcal O}
 \newcommand{\inv}[1]{\frac 1 {#1}}
+\renewcommand{\tilde}[1]{\widetilde{#1}}
 
 \DeclareMathOperator{\cotan}{cotan}
 \DeclareMathOperator{\sinc}{sinc}
