--- a/.tex/common.sty
+++ b/.tex/common.sty
@@ -27,7 +27,7 @@
 \usepackage{amsmath, amssymb, amsthm}
 \usepackage{commath}
 % commath's guessing of the display size is wrong, just let \frac decide
-\renewcommand{\pd}[3][]{\ensuremath{\mathinner{
+\renewcommand{\pd}[3]{\ensuremath{\mathinner{
 \frac{\partial{^{#1}}#2}{\partial{#3^{#1}}}
 }}}
 \renewcommand{\md}[6]{\ensuremath{\mathinner{
